--- a/install/environment-gpu.yml
+++ b/install/environment-gpu.yml
@@ -1,4 +1,4 @@
-name: dl
+name: dl-st
 channels:
     - https://conda.anaconda.org/menpo
     - conda-forge
@@ -7,20 +7,7 @@ dependencies:
     - numpy
     - matplotlib
     - jupyter
-    - opencv3
-    - pillow
     - scikit-learn
     - scikit-image
-    - scipy
-    - h5py
-    - eventlet
-    - flask-socketio
-    - seaborn
-    - pandas
-    - ffmpeg
-    - imageio=2.1.2
-    - pyqt=4.11.4
     - pip:
-        - moviepy
-        - https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-1.1.0-cp35-cp35m-linux_x86_64.whl
-        - keras==2.0.4
+        - tensorflow-gpu==1.2.0
